--- a/Inhalt/04_Inhalt/content_business_understanding.tex
+++ b/Inhalt/04_Inhalt/content_business_understanding.tex
@@ -1,5 +1,5 @@
 \chapter{Business Understanding}
-In the guide complementing the \ac{CRISP-DM} model \cite{CRISPDM2000}, different tasks, and outputs for developing a business understanding are mentioned. The task and respective output will be dicussed in the following sections.
+In the guide complementing the \ac{CRISP-DM} model, different tasks, and outputs for developing a business understanding are mentioned. The task and respective output will be dicussed in the following sections.
 
 \section{Business Objectives}
 Businesses without existing an \ac{ERP} solution in place can easily be overwhelmed by the number of invoices reaching them daily. Even more, the controlling department can easily lose the overview of spending. To quickly gain a perspective on the most important spending topics, spending should be sorted in categories of similar nature.
