--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -1,15 +1,20 @@
 
 @online{AIOverviewResearch,
-  title = {{{AI Overview Research}}},
+  title = {{{AI Research}}},
+  author = {{SAP SE}},
   url = {https://www.sap.com/products/artificial-intelligence/research.html},
-  organization = {{AI Overview}}
+  urldate = {2022-04-27}
 }
 
-@article{beyerNearestNeighbor,
+@inproceedings{beyerNearestNeighbor,
   title = {When {{Is}} “{{Nearest Neighbor}}” {{Meaningful}}?},
+  booktitle = {{{LNCS}}},
   author = {Beyer, Kevin and Goldstein, Jonathan and Ramakrishnan, Raghu and Shaft, Uri},
-  pages = {19},
+  date = {1998},
+  volume = {1540},
+  publisher = {{Springer-Verlag Berlin Heidelberg}},
   abstract = {We explore the effect of dimensionality on the “nearest neighbor” problem. We show that under a broad set of conditions (much broader than independent and identically distributed dimensions), as dimensionality increases, the distance to the nearest data point approaches the distance to the farthest data point. To provide a practical perspective, we present empirical results on both real and synthetic data sets that demonstrate that this effect can occur for as few as 10-15 dimensions.},
+  eventtitle = {International {{Conference}} on {{Database Theory}}},
   langid = {english},
   file = {/Users/I518232/Zotero/storage/JNTP4SFM/Beyer et al. - When Is “Nearest Neighbor” Meaningful.pdf}
 }
@@ -31,12 +36,11 @@
 
 @article{chowdhury2003,
   title = {Natural Language Processing},
-  author = {{Gobinda G. Chowdhury}},
+  author = {Chowdhury, Gobinda G.},
   date = {2003-01-31},
   journaltitle = {Annual Review of Information Science and Technology},
   volume = {37},
   number = {1},
-  pages = {51--89},
   publisher = {{Springer}},
   issn = {0066-4200},
   doi = {10.1002/aris.1440370103},
@@ -46,15 +50,16 @@
 @book{corePython,
   title = {Core Python Programming},
   author = {Chun, Wesley},
-  date = {2001},
+  date = {2006-09},
   volume = {1},
   publisher = {{Prentice Hall Professional}}
 }
 
-@inproceedings{CRISPDM2000,
+@misc{CRISPDM2000,
   title = {{{CRISP-DM}} 1.0: {{Step-by-step}} Data Mining Guide},
   author = {Chapman, Peter and Clinton, Janet and Kerber, Randy and Khabaza, Tom and Reinartz, Thomas P. and Shearer, Colin and Wirth, Richard},
   date = {2000},
+  publisher = {{SPSS Inc.}},
   file = {/Users/I518232/Zotero/storage/XWX5MT84/Chapman et al. - 2000 - CRISP-DM 1.0 Step-by-step data mining guide.pdf}
 }
 
@@ -90,11 +95,8 @@
   shortjournal = {IEEE Trans. Knowl. Data Eng.},
   volume = {33},
   number = {8},
-  pages = {3048--3061},
   issn = {1041-4347, 1558-2191, 2326-3865},
   doi = {10.1109/TKDE.2019.2962680},
-  url = {https://ieeexplore.ieee.org/document/8943998/},
-  urldate = {2022-04-01},
   abstract = {CRISP-DM(CRoss-Industry Standard Process for Data Mining) has its origins in the second half of the nineties and is thus about two decades old. According to many surveys and user polls it is still the de facto standard for developing data mining and knowledge discovery projects. However, undoubtedly the field has moved on considerably in twenty years, with data science now the leading term being favoured over data mining. In this paper we investigate whether, and in what contexts, CRISP-DM is still fit for purpose for data science projects. We argue that if the project is goal-directed and process-driven the process model view still largely holds. On the other hand, when data science projects become more exploratory the paths that the project can take become more varied, and a more flexible model is called for. We suggest what the outlines of such a trajectory-based model might look like and how it can be used to categorise data science projects (goal-directed, exploratory or data management). We examine seven real-life exemplars where exploratory activities play an important role and compare them against 51 use cases extracted from the NIST Big Data Public Working Group. We anticipate this categorisation can help project planning in terms of time and cost characteristics.},
   langid = {english},
   file = {/Users/I518232/Zotero/storage/3QPU4C26/Martinez-Plumed et al. - 2021 - CRISP-DM Twenty Years Later From Data Mining Proc.pdf}
@@ -120,14 +122,15 @@
 }
 
 @online{GeschichteSAP1972,
-  title = {Geschichte Der {{SAP}}},
+  title = {Geschichte Der {{SAP}} - {{Die Anfangsjahre}} 1972-1980},
+  author = {{SAP SE}},
   url = {https://www.sap.com/germany/about/company/history/1972-1980.html},
-  organization = {{Die Anfangsjahre 1072-1980}}
+  urldate = {2022-03-15}
 }
 
 @online{internalExternalData,
   title = {3 {{Keys}} to {{Managing Data}} and {{Maximizing Business Intelligence}}},
-  author = {at Worthwhile (worthwhile.com), The Fine Folks},
+  author = {Rundle, Dan},
   url = {https://worthwhile.com/insights/2017/02/20/data-business-intelligence/},
   urldate = {2022-04-06},
   abstract = {To maximize your company data and build real business intelligence solutions, you need to understand these 3 dichotomies of data.},
@@ -136,6 +139,7 @@
 
 @online{investopediaInvoices,
   title = {Understanding {{Invoices}}},
+  author = {Hayes, Adam},
   url = {https://www.investopedia.com/terms/i/invoice.asp},
   urldate = {2022-03-28},
   abstract = {An invoice records itemized transactions and is used for expense management and bookkeeping.},
@@ -158,10 +162,10 @@
 @online{JuergenMuellerBiography,
   type = {Company Website},
   title = {Juergen {{Mueller}} Biography},
+  author = {{SAP SE}},
   url = {https://www.sap.com/about/company/leadership/juergen-mueller.html},
   urldate = {2022-03-15},
-  langid = {english},
-  organization = {{Juergen Mueller biography}}
+  langid = {english}
 }
 
 @incollection{KanbanAnderson,
@@ -176,16 +180,20 @@
 
 @article{KDD,
   title = {From {{Data Mining}} to {{Knowledge Discovery}} in {{Databases}}},
-  author = {Fayyad, Usama},
-  pages = {18},
+  author = {Fayyad, Usama and Piatetsky-Shapiro, Gregory and Smyth, Padhraic},
+  date = {1996},
+  journaltitle = {American Association for Artificial Intelligence},
+  volume = {17},
+  number = {3},
+  entrysubtype = {magazine},
   langid = {english},
   file = {/Users/I518232/Zotero/storage/LEN9UCDZ/Fayyad - From Data Mining to Knowledge Discovery in Databas.pdf}
 }
 
-@article{kochEInvoicingJourney,
+@report{kochEInvoicingJourney,
   title = {The {{E-Invoicing Journey}} 2019-2025},
   author = {Koch, Bruno},
-  pages = {7},
+  institution = {{Billentis}},
   url = {https://www.billentis.com/The_einvoicing_journey_2019-2025.pdf},
   langid = {english},
   file = {/Users/I518232/Zotero/storage/PL4PH5EP/Koch - The E-Invoicing Journey 2019-2025.pdf}
@@ -202,13 +210,15 @@
 
 @online{largeDataSetMedium,
   title = {What to {{Do When Your Data Is Too Big}} for {{Your Memory}}?},
-  url = {https://towardsdatascience.com/what-to-do-when-your-data-is-too-big-for-your-memory-65c84c600585#:~:text=Money%2Dcosting%20solution%3A%20One%20possible,arrangement%20to%20handle%20the%20workload.}
+  author = {Metwalli, Sara A.},
+  url = {https://towardsdatascience.com/what-to-do-when-your-data-is-too-big-for-your-memory-65c84c600585},
+  urldate = {2022-04-13}
 }
 
 @online{manualInvoiceProcessing,
   title = {It’s Costing How Much? {{The}} Truth about Manual Invoice Processing},
   shorttitle = {It’s Costing How Much?},
-  author = {{SME}},
+  author = {Ball, Daniel},
   date = {2018-05-02T09:03:09+00:00},
   url = {https://www.smeweb.com/2018/05/02/costing-much-truth-manual-invoice-processing/},
   urldate = {2022-03-28},
@@ -242,8 +252,9 @@
 }
 
 @online{pythonDocker,
-  title = {Python - {{Pfficial Image}} | {{DockerHub}}},
-  url = {https://hub.docker.com/_/python}
+  title = {Python - {{Official Image}} | {{DockerHub}}},
+  url = {https://hub.docker.com/_/python},
+  urldate = {2022-04-20}
 }
 
 @online{pythonVsR,
@@ -270,9 +281,10 @@
 
 @online{rutschmannSAPLeonardo2021,
   title = {The {{Journey}} from {{SAP Leonardo Machine Learning Foundation}} to {{SAP AI Core}} and {{SAP AI Launchpad}}},
-  author = {{Daniel Rutschmann}},
+  author = {Rutschmann, Daniel},
   date = {2021-10-11},
   url = {https://blogs.sap.com/2021/10/11/the-journey-from-sap-leonardo-machine-learning-foundation-to-sap-ai-core-and-sap-ai-launchpad/},
+  urldate = {2022-03-16},
   organization = {{SAP Community}}
 }
 
@@ -294,21 +306,22 @@
 
 @online{schmitzLeonardo,
   title = {Was ist SAP Leonardo?},
-  author = {{Andreas Schmitz}},
+  author = {Schmitz, Andreas},
   date = {2017-07-11},
   url = {https://news.sap.com/germany/2017/07/was-ist-sap-leonardo-iot/},
+  urldate = {2022-03-16},
   langid = {german}
 }
 
 @online{SCRUMSolo,
   title = {Scrum and the {{Solo Dev}}},
   author = {Gant, Michael},
-  date = {2019-06-18T16:20:08},
+  date = {2019-04-15},
   url = {https://medium.com/@jmgant.cleareyeconsulting/scrum-and-the-solo-dev-fb8e810ed42b},
   urldate = {2022-03-29},
   abstract = {Can a solo developer follow a Scrum process? Google it, you’ll get a few different answers. Here’s mine.},
   langid = {english},
-  organization = {{Medium}},
+  organization = {{Medium.com}},
   file = {/Users/I518232/Zotero/storage/X4YGSRA7/scrum-and-the-solo-dev-fb8e810ed42b.html}
 }
 
@@ -325,8 +338,9 @@
 }
 
 @online{structuredAndUnstructuredData,
-  title = {Structured vs {{Unstructured Data}} 101: {{Top Guide}}},
+  title = {Structured vs {{Unstructured Data}}},
   shorttitle = {Structured vs {{Unstructured Data}} 101},
+  author = {Taylor, Christine},
   date = {2021-05-21T15:00:00+00:00},
   url = {https://www.datamation.com/big-data/structured-vs-unstructured-data/},
   urldate = {2022-03-28},
@@ -352,6 +366,7 @@
 
 @online{whyExternalData,
   title = {Why External Data Should Be Part of Your Data Strategy},
+  author = {Brown, Sara},
   url = {https://mitsloan.mit.edu/ideas-made-to-matter/why-external-data-should-be-part-your-data-strategy},
   urldate = {2022-04-06},
   abstract = {Third-party data is out there to find and use. To make external data work for your firm, vet it carefully and make it part of a centralized data strategy.},
