--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -127,7 +127,7 @@
 \pagestyle{plain}
 \pagenumbering{Roman}                   % Römische Seitenzahlen
 \setcounter{page}{\numexpr\value{savepage}+1}
-\printbibliography[title=Literaturverzeichnis]
+\printbibliography[title=References]
 
 % ---- Anhang
 \appendix
