--- a/Inhalt/04_Inhalt/content_business_understanding.tex
+++ b/Inhalt/04_Inhalt/content_business_understanding.tex
@@ -52,14 +52,15 @@ With not reaching the original goal of a research project, the work does not aut
 \subsection{Terminology}
 To summarize both relevant data mining and business terminology, a glossary was compiled.
 \textcolor{red}{This is not yet completed, as the glossary of terms will be expanded while writing the thesis.}
-	\paragraph{Clustering Algorithm} is a sequence of instructions, which arranges a set of instances into groups, which contain items of high similarity to each other.
-	\paragraph{Document}
-	\paragraph{\ac{NLP}}is often attributed to computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
-	
-	\paragraph{SAP AI Foundation} is a term describing SAP's offerings of the AI Launchpad and AI Core.
-	\paragraph{SAP AI Launchpad} is a tool for the operation of AI content inside an SAP system.
-	\paragraph{SAP AI Core} allows for training and serving AI scenarios \cite{schmitzLeonardo}.
-	\paragraph{Hyperscaler}
+	\paragraph{Clustering Algorithm} A clustering algorithm is a sequence of instructions, which arranges a set of instances into groups, which contain items of high similarity to each other.
+	\paragraph{Document} A document is a unit of data most typically containing natural language text.
+	\paragraph{Hyperscaler} A hyperscaler is a company offering achitecture to adapt to changing workloads in cloud computing, networking and internet services.
+	\paragraph{\acf{NLP}} \ac{NLP} is often attributed to computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
+	\paragraph{Script} A script is  a small piece of code contained in a single file, most commonly written in a dynamic high-level programming language.
+	\paragraph{SAP AI Foundation} The SAP AI Foundation is a term describing SAP's offerings of the AI Launchpad and AI Core.
+	\paragraph{SAP AI Launchpad} The SAP AI Launchpad is a tool for the operation of AI content inside an SAP system.
+	\paragraph{SAP AI Core} SAP AI Core allows for training and serving AI scenarios \cite{schmitzLeonardo}.
+
 
 \section{Data Mining Goals}
 The following data mining goals were identified during the phase of business understanding:
@@ -97,15 +98,14 @@ For the availability of resources, R clearly scores. In general, Python has a la
 Deploying a python solution is easily possible via APIs, webapps and containerization technologies. R is also displayable on the web using specific packages. Both R and Python can be deployed in docker containers \cite{rDocker} \cite{pythonDocker} paving the way to be deployed on all major hyperscalers.
 It can be stated that python has superior ability to be scaled and deployed as it is a general purpose programming language. 
 
-\paragraph{Programming Environment}
-With the programming language decided, the basic programming paradigm has to be chosen.
+\paragraph{Programming Paradigm}
+With the programming language decided, the basic programming paradigm has to be chosen. Python is an high-level object-oriented language, containing also functional aspects \cite[chapter~1.3.2]{corePython}. Python allows for programming using only scripts, but also supports and encourages the use of modules to separate files.
+For data scientist, the decision between modular code and code contained in a notebook presents itself in the beginning of every project. Python code in modules can be organized into several files calling each other when needed. This option requires careful documentation, as there is no graphical interface showing dependencies between the modules.
 
+Python notebooks are structured to represent code, descriptions and the output. The most popular notebook format are Jupyter Notebooks, representing code and additional information as \ac{JSON} data.
+While notebooks allow to tell a story using visualizations and descriptions, they lack in ability to be easily deployed using common methods. Of course, the deplyoment of a Jupyter Notebook is not impossible, but disproportionately more difficult than deploying python modules.
 
-- modular
-- script
-
-- jupyter
-- 
+Since not every part of a data-science project has to be deployed, a hybrid approach to Juypter Notebooks and modular coding makes sense. The data understanding part of the project will be completed using notebooks. The data preparation and the modelling will be completed in python modules to ensure deployability if desired.
 
 
 
