--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -168,6 +168,13 @@
   langid = {english}
 }
 
+@online{jupyterteamArchitecture,
+  title = {Architecture},
+  author = {{Jupyter Team}},
+  url = {https://docs.jupyter.org/en/latest/projects/architecture/content-architecture.html},
+  urldate = {2022-04-30}
+}
+
 @incollection{KanbanAnderson,
   booktitle = {Kanban},
   author = {Anderson, David},
