--- a/Inhalt/00_Latex/praeambel.tex
+++ b/Inhalt/00_Latex/praeambel.tex
@@ -120,3 +120,7 @@
 % ---- Für Todo Notes
 \usepackage{todonotes}
 \setlength {\marginparwidth }{2cm}      % Abstand für Todo Notizen
+\usepackage{multicol}
+\usepackage{enumitem}
+\setenumerate{nolistsep}
+\setitemize{nolistsep}
