correct label for histogram

--- a/Inhalt/04_Inhalt/content_data_understanding.tex
+++ b/Inhalt/04_Inhalt/content_data_understanding.tex
@@ -28,7 +28,7 @@ The descriptions of invoice items vary greatly in their length. While the larges
 \begin{figure}[ht]
 	\centering
 	\includegraphics[height=8cm]{Bilder/hist_description.pdf}
-	\caption{Number of Invoices per Language}
+	\caption{Histogram of Description Length}
 	\label{fig:languages-bar}
 \end{figure}
 
