--- a/Inhalt/04_Inhalt/appendix.tex
+++ b/Inhalt/04_Inhalt/appendix.tex
@@ -1,6 +1,6 @@
 \chapter{Appendix}
 \section{Inventory of Resources}
-\begin{table}[]
+\begin{table}[!ht]
     \caption{Inventory of Resources}
     \begin{tabular}{lll}
     \textbf{Type of resources} & \textbf{Kind of resources} & \textbf{Quantification}                                                    \\
@@ -22,11 +22,11 @@
     \end{table}
 
 
-
+\cleardoublepage
 
 
 \section{Invoice Header Data}
-\begin{multicols}{3}
+\begin{multicols}{2}
 	\label{invoice-header}
 	\begin{itemize}
 		\setlength\multicolsep{0pt}
@@ -204,14 +204,14 @@
 		\item[] vendorName.value
 		\item[] vendorTaxID.key
 		\item[] vendorTaxID.value
-
-
+\end{itemize}
+\end{multicols}
 \cleardoublepage
 
 
 
 \section{Invoice Line Item Data}
-\begin{multicols}{3}
+\begin{multicols}{2}
 	\label{invoice-lines}
 	\begin{itemize}
 		\setlength\multicolsep{0pt}
