--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -86,6 +86,25 @@
   file = {/Users/I518232/Zotero/storage/VCIPKW2Y/crisp-dm-still-most-popular.html}
 }
 
+@article{dataQualityAzeroual,
+  title = {Data Measurement in Research Information Systems: Metrics for the Evaluation of Data Quality},
+  shorttitle = {Data Measurement in Research Information Systems},
+  author = {Azeroual, Otmane and Saake, Gunter and Wastl, Jürgen},
+  date = {2018-06},
+  journaltitle = {Scientometrics},
+  shortjournal = {Scientometrics},
+  volume = {115},
+  number = {3},
+  pages = {1279},
+  issn = {0138-9130, 1588-2861},
+  doi = {10.1007/s11192-018-2735-5},
+  url = {http://link.springer.com/10.1007/s11192-018-2735-5},
+  urldate = {2022-05-07},
+  abstract = {In recent years, research information systems (RIS) have become an integral part of the university’s IT landscape. At the same time, many universities and research institutions are still working on the implementation of such information systems. Research information systems support institutions in the measurement, documentation, evaluation and communication of research activities. Implementing such integrative systems requires that institutions assure the quality of the information on research activities entered into them. Since many information and data sources are interwoven, these different data sources can have a negative impact on data quality in different research information systems. Because the topic is currently of interest to many institutions, the aim of the present paper is firstly to consider how data quality can be investigated in the context of RIS, and then to explain how various dimensions of data quality described in the literature can be measured in research information systems. Finally, a framework as a process flow according to UML activity diagram notation is developed for monitoring and improvement of the quality of these data; this framework can be implemented by technical personnel in universities and research institutions.},
+  langid = {english},
+  file = {/Users/I518232/Zotero/storage/26I6JWLE/Azeroual et al. - 2018 - Data measurement in research information systems .pdf}
+}
+
 @article{dataScienceProjectTypes,
   title = {{{CRISP-DM Twenty Years Later}}: {{From Data Mining Processes}} to {{Data Science Trajectories}}},
   shorttitle = {{{CRISP-DM Twenty Years Later}}},
@@ -309,6 +328,14 @@
 @online{scaleAI,
   title = {{{ScaleAI}}},
   url = {https://scale.com/document-ai}
+}
+
+@online{scaleaiScaleDocumentAI,
+  title = {Scale {{Document AI}}: {{Template-Free}}, {{High-Quality Extraction}}},
+  author = {{Scale AI}},
+  url = {https://scale.com/document-ai},
+  urldate = {2022-05-09},
+  organization = {{Scale Document AI: Template-Free, High-Quality Extraction}}
 }
 
 @online{schmitzLeonardo,
